Remove `StringUtils`